--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">    
   <head>
     <meta charset="UTF-8">
-    <title>City Skyline</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expérimentations</title>
     <link href="styles.css" rel="stylesheet" />   
   </head>
 
   <body>
+    <div class="penguin-rouge">
+      <div class="left-mountain"></div>
+      <div class="back-mountain"></div>
+      <div class="moon"></div>
+      <div class="penguin">
+        <div class="penguin-head"></div>
+        <div class="penguin-body"></div>
+      </div>
+      <div class="ground"></div>
+    </div>
     <div class="background-buildings">
       <div></div>
       <div></div>
